crates/wyrd-for-games/tests/ui/pattern_unknown_binding.stderr
error[E0425]: cannot find value `missing` in this scope
  --> tests/ui/pattern_unknown_binding.rs:10:27
   |
10 |             input start = missing.in;
   |                           ^^^^^^^ not found in this scope
